# daktilo-tray

./: .gitignore  AGENT-ENV.org  AGENTS.md  Cargo.toml  HACKING.org  README.md  WORK.org  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: acme-pfx.yml  coverage.yml  release.yml  supply-chain-gate.yml  windows-sign-smoke.yml
scripts/: bootstrap-codesign.ps1  common-dist.ps1  prepare-codesign-secrets.ps1  provision-dev-cert.ps1  release-windows.ps1  request-acme-pfx.ps1  run-cargo-pants.ps1  run-coverage.ps1  sign-windows.ps1  test-installer.ps1
scripts/ci/: verify-daktilo.ps1
src/: main.rs
wix/: main.wxs
