[package]
name = "daktilo-tray"
version = "0.1.0"
edition = "2021"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]
description = "daktilo-tray brings the typewriter emulator daktilo to the tray"
license-file = "LICENSE"
repository = "https://github.com/ndtoan96/daktilo-tray"
categories = ["emulators"]
keywords = ["tray", "keyboard", "typewriter", "type", "nostalgic"]

[package.metadata.wix]
upgrade-guid = "80937379-FA3C-41C6-A138-564EE28E2F0A"
path-guid = "8F089AB0-C954-49E2-B383-BBBEC70DA77E"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daktilo_lib = { path = "../daktilo/crates/daktilo_lib" }
directories = "5.0.1"
image = "0.25.1"
rdev = "0.5.3"
rodio = "0.17.3"
auto-launch = "0.5.0"
serde = { version = "1.0.198", features = ["derive"] }
tao = "0.27.0"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tray-icon = "0.13.4"

[build-dependencies]
winres = "0.1.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
